updated site signup page. iamserda

--- a/index.html
+++ b/index.html
@@ -5,30 +5,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rabbits Run</title>
+    <title>GatoBase Coders Camp</title>
     <link href="index.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <div id="app" class="app container">
-        <div class="bg-image">
+
+        <!-- IMAGE and COMPANY LOGO -->
+        <div class="container bg-image">
             <div class="dark-veil container">
                 <div class="content container">
                     <h1 class="brand">GatoBase</h1>
                     <h4 class="motto"><q>We help you reach <span>God Mode</span> as a Software Engineer.</q></h4>
                     <p class="call-to-action">Join Us for a Live Info Webinar</p>
-                    <footer class="container">
-                        <p class="photographer">
-                            <span>Photo by <a
-                                    href="https://unsplash.com/@wocintechchat?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Christina
-                                    @ wocintechchat.com</a> on <a
-                                    href="https://unsplash.com/s/photos/software-engineer?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
-                        </p>
-                    </footer>
-
                 </div>
-
-
+                <footer class="container footer">
+                    <p class="photographer">
+                        <span>Photo by <a
+                                href="https://unsplash.com/@wocintechchat?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Christina
+                                @ wocintechchat.com</a> on <a
+                                href="https://unsplash.com/s/photos/software-engineer?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+                    </p>
+                </footer>
             </div>
         </div>
 
@@ -42,21 +41,20 @@
             </div>
             <div class="container">
                 <form class='form' action="#" method="">
-                    <div><label for="fname"> First name: </label>
+                    <div class="container">
+                        <label for="fname"> First name: </label>
                         <input name="firstname" id="fname" placeholder="First name" type="text" minlength="2" required />
                         <label for="lname"> Last name </label>
                         <input name="lastname" id="lname" placeholder="Last name" type="text" minlength="2" required />
-
                         <input class="button" type="submit" value="Submit" />
-
                     </div>
                 </form>
-                <footer>
-                    <p class="footer">© Feb 2021, Made with ❤️ in Inwood, NY</p>
-                </footer>
+
 
             </div>
-
+            <footer class="container footer">
+                <p class="footer">© Feb 2021, Made with ❤️ in Inwood, NY</p>
+            </footer>
         </div>
     </div>
 </body>
