repaired footer, added animations. -iamserda

--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
 
         <!-- FORM and Registration -->
         <div class="container info-form">
-            <div class="container">
-                <h2 class="promo">Become a top Software Engineer.</h2>
-                <p class="call-to-action">Register Today!</p>
-                <p class='text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-            </div>
-            <div class="container">
-                <form class='form' action="#" method="">
-                    <div class="container">
-                        <label for="fname"> First name: </label>
-                        <input name="firstname" id="fname" placeholder="First name" type="text" minlength="2" required />
-                        <label for="lname"> Last name </label>
-                        <input name="lastname" id="lname" placeholder="Last name" type="text" minlength="2" required />
-                        <input class="button" type="submit" value="Submit" />
-                    </div>
-                </form>
-
-
+            <div class="info container">
+                <div class="container">
+                    <h2 class="promo">Become a top Software Engineer.</h2>
+                    <p class="call-to-action">Register Today!</p>
+                    <p class='text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </div>
+                <div class="container">
+                    <form class='form' action="#" method="">
+                        <div class="container">
+                            <label for="fname"> First name: </label>
+                            <input name="firstname" id="fname" placeholder="First name" type="text" minlength="2" required />
+                            <label for="lname"> Last name </label>
+                            <input name="lastname" id="lname" placeholder="Last name" type="text" minlength="2" required />
+                            <input class="button" type="submit" value="Submit" />
+                        </div>
+                    </form>
+                </div>
             </div>
             <footer class="container footer">
                 <p class="footer">© Feb 2021, Made with ❤️ in Inwood, NY</p>
