--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container bg-image">
             <div class="dark-veil container">
                 <div class="content container">
-                    <h1 class="brand">GatoBase</h1>
+                    <h1 class="brand">Gato<span>Base</span></h1>
                     <h4 class="motto"><q>We help you reach <span>God Mode</span> as a Software Engineer.</q></h4>
                     <p class="call-to-action">Join Us for a Live Info Webinar</p>
                 </div>
@@ -33,22 +33,24 @@
 
         <!-- FORM and Registration -->
         <div class="container info-form">
-            <div class="info container">
+            <div id="info" class="info container">
                 <div class="container">
                     <h2 class="promo">Become a top Software Engineer.</h2>
                     <p class="call-to-action">Register Today!</p>
-                    <p class='text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    <p class='text'>Software Engineering isn't just seating before your computer and writing code. It's part art, part sciencce! We know this because we do it everyday. One way to speed up the process is to learn from the best. You can do just that by
+                        signing up for this free webinar!
                     </p>
                 </div>
                 <div class="container">
-                    <form class='form' action="#" method="">
+                    <form id="signupForm" class="form" action="#" method="POST">
                         <div class="container">
-                            <label for="fname"> First name: </label>
-                            <input name="firstname" id="fname" placeholder="First name" type="text" minlength="2" required />
-                            <label for="lname"> Last name </label>
-                            <input name="lastname" id="lname" placeholder="Last name" type="text" minlength="2" required />
+                            <label for="name"> Full Name: </label>
+                            <input name="name" id="name" placeholder="Firstname Lastname" type="text" minlength="5" required />
+                            <label for="email"> Email: </label>
+                            <input name="email" id="email" placeholder="email@example.com" type="email" minlength="2" required />
                             <input class="button" type="submit" value="Submit" />
                         </div>
+
                     </form>
                 </div>
             </div>
@@ -57,6 +59,7 @@
             </footer>
         </div>
     </div>
+    <script src="index.js" type="text/javascript" rel="script"></script>
 </body>
 
 </html>
